--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,8 @@ on:
   workflow_dispatch:
 
 env:
-  NopSCADlibVer: v21.8.0
-  NopTarBall: ${{NopSCADlibVer}}.tar.gz
+  NopVer: v21.8.0
+  NopTarBall: ${NopVer}.tar.gz
   NopSCADlib: https://github.com/nophead/NopSCADlib/archive/refs/tags/${NopTarBall}
   scad_utils: https://github.com/openscad/scad-utils.git
   LIBS: .local/share/OpenSCAD/libraries
@@ -48,7 +48,7 @@ jobs:
         working-directory: ${HOME}/${{env.LIBS}}
         wget ${{env.NopSCADlib}}
         tar -xzf ${{env.NopTarBall}}
-        ln -s ${{env.NopTarBall}} NopSCADlib
+        ln -s ${{env.NopVer}} NopSCADlib
 
     - name: scad-utils
       run: |
