--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ env:
   NopTarBall: ${NopVer}.tar.gz
   NopSCADlib: https://github.com/nophead/NopSCADlib/archive/refs/tags/${NopTarBall}
   scad_utils: https://github.com/openscad/scad-utils.git
-  LIBS: .local/share/OpenSCAD/libraries
+  LIBS: /home/runner/.local/share/OpenSCAD/libraries
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -37,26 +37,26 @@ jobs:
       # install Ninja 'cause of the automatic build parallelism tuned with the
       # number of processors found in the hosting system
       run: |
-        whoami
         sudo apt update
         sudo apt upgrade -y
         sudo apt install -y openscad python3-venv wget
-        mkdir -p ${HOME}/${{env.LIBS}}
+        mkdir -p ${{ runner.home }}/${{env.LIBS}}
 
     - name: NopSCADlib
       run: |
-        working-directory: ${HOME}/${{env.LIBS}}
+        working-directory: ${{env.LIBS}}
         wget ${{env.NopSCADlib}}
         tar -xzf ${{env.NopTarBall}}
         ln -s ${{env.NopVer}} NopSCADlib
 
     - name: scad-utils
       run: |
-        working-directory: ${HOME}/${{env.LIBS}}
+        working-directory: ${{env.LIBS}}
         git clone https://github.com/openscad/scad-utils.git
 
     - name: make sources and documentation
       run: |
+        working-directory: ${{github.workspace}}
         python -m venv .venv
         source .venv/bin/activate
         pip install --upgrade pip
