--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,6 +45,7 @@ jobs:
     - name: NopSCADlib
       working-directory: ${{env.LIBS}}
       run: |
+        echo "NopSCADlib: ${{env.NopSCADlib}}"
         wget ${{env.NopSCADlib}}
         tar -xzf ${{env.NopTarBall}}
         ln -s ${{env.NopVer}} NopSCADlib
