--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
         sudo apt update
         sudo apt upgrade -y
         sudo apt install -y openscad python3-venv wget
-        mkdir -p ${{ runner.home }}/${{env.LIBS}}
+        mkdir -p ${{env.LIBS}}
 
     - name: NopSCADlib
       working-directory: ${{env.LIBS}}
@@ -49,6 +49,7 @@ jobs:
         wget ${{env.NopSCADlib}}
         tar -xzf ${{env.NopTarBall}}
         ln -s ${{env.NopVer}} NopSCADlib
+        ls -al
 
     - name: scad-utils
       working-directory: ${{env.LIBS}}
