--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,7 +48,7 @@ jobs:
         echo "NopSCADlib: ${{env.NopSCADlib}}"
         wget ${{env.NopSCADlib}}
         tar -xzf ${{env.NopTarBall}}
-        ln -s ${{env.NopVer}} NopSCADlib
+        ln -s NopSCADlib-${{env.NopVer}} NopSCADlib
         ls -al
 
     - name: scad-utils
