--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,12 +19,15 @@ env:
   NopSCADlib: https://github.com/nophead/NopSCADlib/archive/refs/tags/v21.8.0.tar.gz
   scad_utils: https://github.com/openscad/scad-utils.git
   LIBS: /home/runner/.local/share/OpenSCAD/libraries
+  ODOX_URL: https://github.com/ggabbiani/orthodocs/releases/download/v1.2.1
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   ubuntu-test:
     name: Ubuntu tests
     runs-on: ubuntu-latest
+    env:
+      ODOX_PKG: orthodocs_1.2.1_amd64.deb
     steps:
     - name: Project checkout
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -41,6 +44,8 @@ jobs:
         sudo apt upgrade -y
         # TODO: replace deps.sh with a python version based on pydot (installed via pip)
         sudo apt install -y graphviz openscad python3-venv wget xvfb
+        wget ${{env.ODOX_URL}}/${{env.ODOX_PKG}}
+        apt install ./${{env.ODOX_PKG}}
         mkdir -p ${{env.LIBS}}
 
     - name: NopSCADlib
