workaround applied on orthodocs call for error during document generation (verbosity changed from 'off' to default)

--- a/orthodocs/Makefile
+++ b/orthodocs/Makefile
@@ -12,7 +12,7 @@ all: api-docs artifacts/all foundation/all vitamins/all
 
 api-docs: $(LIB_SOURCES)
 	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	@$(ODOX) --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --verbosity off --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
+	@$(ODOX) --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
 	@touch $@
 	@printf "\e[32mOK\e[0m\n"
 
