--- a/tests/vitamins/pcb_frame-test.conf
+++ b/tests/vitamins/pcb_frame-test.conf
@@ -121,7 +121,7 @@ cut_direction = CUT_DIRECTION==[0,0,0]  ? undef : let(axes=[X,Y,Z]) [for(i=[0:2]
 pcb   = fl_pcb_select(PCB);
 frame = fl_pcb_Frame(pcb,d=D,faces=FACE_T,wall=WALL,overlap=[WIDE_OVER,THIN_OVER],inclusion=INCLUSION,countersink=COUNTERSINK,layout=LAYOUT);
 
-fl_pcb_frame(verbs,frame,parts=[LEFT,RIGHT],tolerance=TOLERANCE,thick=T,cut_direction=cut_direction,debug=debug,octant=octant,direction=direction)
+fl_pcb_frame(verbs,frame,frame_parts=[LEFT,RIGHT],frame_tolerance=TOLERANCE,thick=T,cut_direction=cut_direction,debug=debug,octant=octant,direction=direction)
   translate(-Z(\$hole_depth))
     fl_cylinder(d=\$hole_d+2,h=T,octant=-\$hole_n);
 "
