--- a/tests/vitamins/pcb_proxy-test.conf
+++ b/tests/vitamins/pcb_proxy-test.conf
@@ -4,7 +4,9 @@ TEST_TEMPLATE="template-3d.scad"
 
 # ARG_CAMERA="0,0,0,0,0,0,7"
 
-# TEST_INCLUDES=""
+TEST_INCLUDES="
+include <../../lib/OFL/vitamins/pcbs.scad>
+"
 
 # TAB_PARAMETERS="
 # \$fn            = 50;           // [3:100]
@@ -20,7 +22,32 @@ TEST_TEMPLATE="template-3d.scad"
 # SHOW_SYMBOLS    = false;
 # "
 
-# TAB_Verbs=""
+TAB_Verbs="
+/* [Supported verbs] */
+
+// Draw base shape (no components nor screws)
+\$FL_ADD       = \"ON\";           // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// Draw predefined component shape(s)
+\$FL_ASSEMBLY  = \"ON\";           // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// adds local reference axes
+\$FL_AXES      = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// assembled shape bounding box
+\$FL_BBOX      = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// layout of predefined cutout shapes (+X,-X,+Y,-Y,+Z,-Z)
+\$FL_CUTOUT    = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// layout of predefined drill shapes (like holes with predefined screw diameter)
+\$FL_DRILL     = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// adds a footprint to scene, usually a simplified ADD operation (see variable FL_ADD)
+\$FL_FOOTPRINT = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// layout of user passed accessories (like alternative screws or supports)
+\$FL_LAYOUT    = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// add mounting accessories shapes
+\$FL_MOUNT     = \"ON\";           // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// components payload bounding box
+\$FL_PAYLOAD   = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// add symbols and labels usually for debugging
+\$FL_SYMBOLS   = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+"
 
 # TAB_Placement="
 # /* [3D Placement] */
@@ -39,7 +66,40 @@ TEST_TEMPLATE="template-3d.scad"
 # DIR_R       = 0;        // [-360:360]
 # "
 
-# TAB_TEST=""
+TAB_TEST="
+/* [PCB Frame] */
+
+LAYOUT  = \"auto\"; // [auto,horizontal,vertical]
+// nominal screw ⌀
+D   = 3;  // [2,2.5,3,4,5,6,8]
+COUNTERSINK = false;
+LEFT  = true;
+RIGHT = true;
+// distance between holes and external frame dimensions
+WALL = 1.5; // [0.5:0.1:3]
+// top and bottom surface thickness
+FACE_T = 1.2;   // [.5:.1:3]
+// overlap along major pcb dimension
+WIDE_OVER = 4; // [0.1:0.1:10]
+// overlap along minor pcb dimension
+THIN_OVER = 1;  // [0:0.1:10]
+// size along major pcb dimension, laterally surrounding the pcb
+INCLUSION = 10; // [0.1:20]
+
+/* [PCB] */
+
+// FL_DRILL and FL_CUTOUT thickness
+T             = 2.5;  // [0:0.1:3]
+// when !=\"undef\", FL_CUTOUT verb is triggered only on the labelled component
+CO_LABEL      = \"undef\";
+// when !=[0,0,0], FL_CUTOUT is triggered only on components oriented accordingly to any of the not-null axis values
+CO_DIRECTION  = [0,0,0];  // [-1:+1]
+
+/* [TEST] */
+
+TOLERANCE=0.5;  // [0:0.1:1]
+PROXY=false;
+"
 
 # TEST_PROLOGUE="
 # direction = DIR_NATIVE    ? undef : [DIR_Z,DIR_R];
@@ -49,4 +109,15 @@ TEST_TEMPLATE="template-3d.scad"
 # fl_status();
 # "
 
-# TEST_CODE=""
+TEST_CODE="
+verbs = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_CUTOUT,FL_DRILL,FL_FOOTPRINT,FL_LAYOUT,FL_MOUNT,FL_PAYLOAD,FL_SYMBOLS]);
+co_direction  = CO_DIRECTION==[0,0,0]  ? undef : let(axes=[X,Y,Z]) [for(i=[0:2]) if (CO_DIRECTION[i]) CO_DIRECTION[i]*axes[i]];
+co_label      = CO_LABEL==\"undef\" ? undef : CO_LABEL;
+
+pcb = FL_PCB_HILETGO_SX1308;
+frame = fl_pcb_Frame(pcb,d=D,faces=FACE_T,wall=WALL,overlap=[WIDE_OVER,THIN_OVER],inclusion=INCLUSION,countersink=COUNTERSINK,layout=LAYOUT);
+
+
+fl_pcb(verbs,PROXY?frame:pcb,
+    direction=direction,octant=octant,thick=T,cut_tolerance=TOLERANCE,cut_label=co_label,cut_direction=co_direction,debug=debug);
+"
