--- a/orthodocs/foundation/Makefile
+++ b/orthodocs/foundation/Makefile
@@ -1,3 +1,16 @@
+#
+# Makefile for:
+#
+#   - pictures CREATION and CLEANUP for 'foundation';
+# 	- markdown documentation files CLEANUP ONLY.
+#
+# This file is part of the 'OpenSCAD Foundation Library' (OFL) project.
+#
+# Copyright © 2021, Giampiero Gabbiani <giampiero@gabbiani.org>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
+
 top:
 	@$(MAKE) -C $(realpath ../..) orthodocs/foundation/all
 
