added iecs documentation

--- a/orthodocs/vitamins/Makefile
+++ b/orthodocs/vitamins/Makefile
@@ -1,8 +1,26 @@
+#
+# Makefile for:
+#
+#   - pictures CREATION and CLEANUP for 'vitamins';
+# 	- markdown documentation files CLEANUP ONLY.
+#
+# This file is part of the 'OpenSCAD Foundation Library' (OFL) project.
+#
+# Copyright © 2021, Giampiero Gabbiani <giampiero@gabbiani.org>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
+
 top:
 	@$(MAKE) -C $(realpath ../..) orthodocs/vitamins/all
 
-all:
-	@echo "Nothing to do here."
+include $(FUNCTIONS)
+
+all: 256x256/all
+
+256x256/%:
+	$(call make_sub)
 
 clean:
 	@rm -f *.md
+	@$(MAKE) -C 256x256 $@
