Fixed missing escape characters

--- a/tests/vitamins/ether-test.conf
+++ b/tests/vitamins/ether-test.conf
@@ -67,7 +67,7 @@ CO_TOLERANCE   = 0;  // [0:0.1:5]
 CO_T  = 2.5;          // [0:0.5:5]
 // translation applied to cutout
 CO_DRIFT = 0; // [-5:0.5:5]
-CO_DIRECTION  = ["+X"];
+CO_DIRECTION  = [\"+X\"];
 "
 
 # TEST_PROLOGUE="
