Added component filtering for fl_pcb{} during FL_ASSEMBLY and FL_CUTOUT

--- a/tests/vitamins/pcb-test.conf
+++ b/tests/vitamins/pcb-test.conf
@@ -75,8 +75,8 @@ TYPE  = \"HiLetgo SX1308 DC-DC Step up power module\";  // [ALL,\"HiLetgo SX1308
 T             = 2.5;  // [0:0.1:3]
 // FL_CUTOUT tolerance
 TOLERANCE     = 0.5;
-// when !=\"undef\", FL_CUTOUT verb is triggered only on the labelled component
-CO_LABEL      = \"undef\";
+// when !=\"undef\", FL_CUTOUT verb is triggered only on the component whose label match the rule
+COMPS      = \"undef\";
 // when !=[0,0,0], FL_CUTOUT is triggered only on components oriented accordingly to any of the not-null axis values
 CO_DIRECTION  = [0,0,0];  // [-1:+1]
 "
@@ -91,7 +91,7 @@ CO_DIRECTION  = [0,0,0];  // [-1:+1]
 
 TEST_CODE="
 co_direction  = CO_DIRECTION==[0,0,0]  ? undef : let(axes=[X,Y,Z]) [for(i=[0:2]) if (CO_DIRECTION[i]) CO_DIRECTION[i]*axes[i]];
-co_label      = CO_LABEL==\"undef\" ? undef : CO_LABEL;
+comps      = COMPS==\"undef\" ? undef : COMPS;
 filament      = \"DodgerBlue\"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
 verbs         = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_CUTOUT,FL_DRILL,FL_FOOTPRINT,FL_LAYOUT,FL_MOUNT,FL_PAYLOAD,FL_SYMBOLS]);
 
@@ -100,7 +100,7 @@ single  = fl_pcb_select(TYPE);
 module test() {
   module pcb(type) {
     fl_pcb(verbs,type,
-      direction=direction,octant=octant,thick=T,cut_tolerance=TOLERANCE,cut_label=co_label,cut_direction=co_direction,debug=debug)
+      direction=direction,octant=octant,thick=T,cut_tolerance=TOLERANCE,components=comps,cut_direction=co_direction,debug=debug)
       children();
   }
 
