Removed the never used FL_SYMBOLS verb.

--- a/tests/vitamins/pcb_proxy-test.conf
+++ b/tests/vitamins/pcb_proxy-test.conf
@@ -45,8 +45,6 @@ TAB_Verbs="
 \$FL_MOUNT     = \"ON\";           // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // components payload bounding box
 \$FL_PAYLOAD   = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
-// add symbols and labels usually for debugging
-\$FL_SYMBOLS   = \"OFF\";          // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
 
 # TAB_Placement="
@@ -110,7 +108,7 @@ PROXY=false;
 # "
 
 TEST_CODE="
-verbs = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_CUTOUT,FL_DRILL,FL_FOOTPRINT,FL_LAYOUT,FL_MOUNT,FL_PAYLOAD,FL_SYMBOLS]);
+verbs = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_CUTOUT,FL_DRILL,FL_FOOTPRINT,FL_LAYOUT,FL_MOUNT,FL_PAYLOAD]);
 co_direction  = CO_DIRECTION==[0,0,0]  ? undef : let(axes=[X,Y,Z]) [for(i=[0:2]) if (CO_DIRECTION[i]) CO_DIRECTION[i]*axes[i]];
 comps      = COMPS==\"undef\" ? undef : COMPS;
 
