Minor fixes and documentation updates

--- a/orthodocs/foundation/256x256/Makefile
+++ b/orthodocs/foundation/256x256/Makefile
@@ -4,7 +4,7 @@
 # get desired image sizes from current directory name
 SIZE		:= $(notdir $(CURDIR))
 SOURCES 	:= $(wildcard *.scad)
-TARGETS		:= $(SOURCES:.scad=.png)
+TARGETS		:= $(SOURCES:.scad=.png) fig_2d_frame.png
 
 top:
 	@$(MAKE) -C $(realpath ../../..) orthodocs/foundation/256x256/all
@@ -12,6 +12,14 @@ top:
 include $(FUNCTIONS)
 
 all: $(TARGETS)
+
+fig_2d_frame.png: $(TESTS)/foundation/square-test.scad
+	$(info $$CAMERA is [${CAMERA}])
+	@printf "\e[33m$(CURDIR)/$@\e[0m: "
+	@source $(TESTS)/foundation/square-test.conf && $(SCAD) --imgsize 9600,9600 -d $(@:.png=.deps) -o unscaled-$@ --p $(TESTS)/foundation/square-test.json --P $(@:.png=) $$CAMERA $$PROJECTION $<
+	@convert unscaled-$@ -resize $(SIZE) $@
+	@rm unscaled-$@
+	@printf "\e[32mOK\e[0m\n"
 
 %.png: %.scad
 	@printf "\e[33m$(CURDIR)/$@\e[0m: "
