--- a/tests/foundation/square-test.conf
+++ b/tests/foundation/square-test.conf
@@ -2,7 +2,7 @@ TEST_DESCRIPTION="2d square test"
 
 TEST_TEMPLATE="template-2d.scad"
 
-CAMERA="--camera 0,0,0,0,0,0,46.2"
+CAMERA="--camera 0.29,0.37,0,0,0,0,46.2"
 PROJECTION="--projection=ortho"
 
 TEST_INCLUDES="
@@ -46,13 +46,13 @@ MODE      = \"square\";  // [frame, square]
 
 // overall size of the rectangle
 SIZE      = [15,10];
-// Quadrant I
+// Quadrant I [x radius,y radius]
 CORNER_0  = [6,3];
-// Quadrant II
+// Quadrant II [x radius,y radius]
 CORNER_1  = [2,2];
-// Quadrant III
+// Quadrant III [x radius,y radius]
 CORNER_2  = [3,6];
-// Quadrant IV
+// Quadrant IV [x radius,y radius]
 CORNER_3  = [0,0];
 
 // frame thickness
