--- a/docs/800x600/Makefile
+++ b/docs/800x600/Makefile
@@ -5,7 +5,6 @@ include $(wildcard *.deps) $(FUNCTIONS)
 # 	openscad -m make -o $@ -d $@.deps $<
 
 SIZE	:= $(notdir $(CURDIR))
-# .PHONY	:= all
 
 top:
 	@$(MAKE) -C $(realpath ../..) docs/800x600/all
@@ -13,11 +12,11 @@ top:
 all:	cover.png
 
 cover.png: $(EXAMPLES)/sbc-box.scad $(EXAMPLES)/sbc-box.json
-	@printf "$(CURDIR)/$@: "
-	@$(SCAD) --imgsize 3200,2400 --p $(EXAMPLES)/sbc-box.json --P cover --camera="7.62939e-7,0,11.925,68.3,0,320.5,281.12" -o /tmp/unscaled-$@ $(EXAMPLES)/sbc-box.scad
+	$(call target-prologue)
+	@$(SCAD) --imgsize "3200,2400" --p $(EXAMPLES)/sbc-box.json --P cover --camera "7.62939e-7,0,11.925,68.3,0,320.5,281.12" -o /tmp/unscaled-$@ --ofl-script $(EXAMPLES)/sbc-box.scad
 	@convert /tmp/unscaled-$@ -resize $(SIZE) $@
 	@rm -f /tmp/unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 clean:
 	@rm -f *.png *.deps
