--- a/docs/Makefile
+++ b/docs/Makefile
@@ -11,10 +11,9 @@ top:
 
 include $(FUNCTIONS)
 
-all: 800x600/all architecture.png artifacts/all foundation/all vitamins/all
+all: 800x600/all artifacts/all foundation/all vitamins/all
 
 clean: 800x600/clean artifacts/clean foundation/clean vitamins/clean
-	@rm -f architecture.png
 
 800x600/%:
 	$(call make_sub,800x600,"OFL/docs")
@@ -27,9 +26,3 @@ foundation/%:
 
 vitamins/%:
 	$(call make_sub,vitamins,"OFL/docs")
-
-architecture.png: architecture.drawio
-	@drawio --export --format png --border 10 --output $(CURDIR)/$@ $<
-	@printf "$(CURDIR)/$@: "
-	@printf "\e[32mOK\e[0m\n"
-
