--- a/tests/vitamins/Makefile
+++ b/tests/vitamins/Makefile
@@ -27,10 +27,12 @@ last: $(word $(words $(RESULTS)),$(RESULTS))
 runs: clean-results $(RESULTS)
 
 clean: clean-results
+	$(call aggregate-prologue)
 	@for f in $(SOURCES) ; do rm -f $$f ; done
-	@echo "$(SOURCES): DELETED"
+	$(call aggregate-epilogue)
+#	@echo "$(SOURCES): DELETED"
 
 clean-results:
-	@printf "\e[33m$@ [tests/vitamins]\e[0m: "
+	$(call aggregate-prologue)
 	@for f in $(RESULTS) ; do rm -fr $$f ; done
-	@printf "\e[32m✔\e[0m\n"
+	$(call aggregate-epilogue)
