--- a/docs/foundation/800x600/Makefile
+++ b/docs/foundation/800x600/Makefile
@@ -21,78 +21,78 @@ clean:
 	@rm -f *.png *.deps
 
 pic-0.png: $(TESTS)/vitamins/magnet-test.scad $(TESTS)/vitamins/magnet-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-1.png: $(TESTS)/vitamins/magnet-test.scad $(TESTS)/vitamins/magnet-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-2.png: $(TESTS)/vitamins/magnet-test.scad $(TESTS)/vitamins/magnet-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-3.png: $(TESTS)/vitamins/magnet-test.scad $(TESTS)/vitamins/magnet-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-4.png: $(TESTS)/vitamins/magnet-test.scad $(TESTS)/vitamins/magnet-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-5.png: $(TESTS)/vitamins/magnet-test.scad $(TESTS)/vitamins/magnet-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-6.png: $(TESTS)/vitamins/magnet-test.scad $(TESTS)/vitamins/magnet-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-7.png: $(TESTS)/vitamins/spdt-test.scad $(TESTS)/vitamins/spdt-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-8.png: $(TESTS)/vitamins/spdt-test.scad $(TESTS)/vitamins/spdt-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 pic-9.png: $(TESTS)/vitamins/spdt-test.scad $(TESTS)/vitamins/spdt-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 torus.png: $(TESTS)/foundation/torus-test.scad $(TESTS)/foundation/torus-test.json
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
-	$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ $<
+	$(call target-prologue)
+	@$(SCAD) --imgsize 3200,2400 -d $(patsubst %.png,%.deps,$@) --p $(word 2,$^) --P $(patsubst %.png,%,$@) -o unscaled-$@ --ofl-script $<
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
