--- a/docs/vitamins/Makefile
+++ b/docs/vitamins/Makefile
@@ -14,9 +14,9 @@ top:
 all: dependencies.svg
 
 dependencies.svg: $(VITAMINS_SOURCES)
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
+	$(call target-prologue)
 	@$(DEPS) --vitamins
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 clean:
 	@rm -f dependencies.svg
