--- a/orthodocs/Makefile
+++ b/orthodocs/Makefile
@@ -1,4 +1,4 @@
-ODOX		:= orthodocs
+ODOX		:= orthodocs --verbosity off
 DOC_ROOT	:= $(CURDIR)
 
 # .PHONY: pics
@@ -11,10 +11,10 @@ include $(FUNCTIONS)
 all: api-docs artifacts/all foundation/all vitamins/all
 
 api-docs: $(LIB_SOURCES)
-	@printf "\e[33m$(CURDIR)/$@\e[0m: "
+	$(call target-prologue)
 	@$(ODOX) --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
 	@touch $@
-	@printf "\e[32mOK\e[0m\n"
+	$(call target-epilogue-success)
 
 artifacts/%:
 	$(call make_sub)
