--- a/tests/foundation/polymorphic-test.conf
+++ b/tests/foundation/polymorphic-test.conf
@@ -5,8 +5,8 @@ TEST_TEMPLATE="template-3d.scad"
 # ARG_CAMERA="0,0,0,0,0,0,7"
 
 TEST_INCLUDES="
-include <NopSCADlib/core.scad>
-include <NopSCADlib/vitamins/iecs.scad>
+include <../../lib/NopSCADlib/core.scad>
+include <../../lib/NopSCADlib/vitamins/iecs.scad>
 
 include <../../lib/OFL/vitamins/screw.scad>
 
