--- a/tests/vitamins/hdmi-test.conf
+++ b/tests/vitamins/hdmi-test.conf
@@ -5,8 +5,8 @@ TEST_TEMPLATE="template-3d.scad"
 # CAMERA="--camera 0,0,0,0,0,0,7"
 
 TEST_INCLUDES="
-include <NopSCADlib/global_defs.scad>
-use     <NopSCADlib/utils/layout.scad>
+include <../../lib/NopSCADlib/global_defs.scad>
+use     <../../lib/NopSCADlib/utils/layout.scad>
 
 include <../../lib/OFL/foundation/core.scad>
 include <../../lib/OFL/vitamins/hdmi.scad>
