--- a/tests/vitamins/usb-test.conf
+++ b/tests/vitamins/usb-test.conf
@@ -7,8 +7,8 @@ TEST_TEMPLATE="template-3d.scad"
 TEST_INCLUDES="
 include <../../lib/OFL/vitamins/usbs.scad>
 
-include <NopSCADlib/global_defs.scad>
-use     <NopSCADlib/utils/layout.scad>
+include <../../lib/NopSCADlib/global_defs.scad>
+use     <../../lib/NopSCADlib/utils/layout.scad>
 "
 
 # TAB_PARAMETERS="
